login and signup pages added

--- a/voyage/authentication/templates/authentication/home.html
+++ b/voyage/authentication/templates/authentication/home.html
@@ -140,9 +140,9 @@ border-radius:7px;
       <h3><i class="fa fa-suitcase" aria-hidden="true" style="padding:5px 10px;color:red;"></i>PACK YOUR BAGS</h3>
     </div>
     <ul>
-      <li><a href="#" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="#"><i class="fa fa-user" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Login</a></li>
-      <li><a href="#"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Signup</a></li>
+      <li><a href="" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="login"><i class="fa fa-user" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Login</a></li>
+      <li><a href="signup"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Signup</a></li>
       <li><a href="#"><i class="fa fa-info" aria-hidden="true" style="padding-right:10px;"class="icon"></i>About</a></li>
       <li><a href="#"><i class="fa fa-phone" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Contact</a></li>
     </ul>
