--- a/voyage/authentication/templates/authentication/user.html
+++ b/voyage/authentication/templates/authentication/user.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
   <title>Document</title>
   <style>
     * {
@@ -12,30 +21,90 @@
 }
 body{
     background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
+    background-size:cover;
+    height:100%;
+}
+nav{
+width:100%;
+position:fixed;
+height:70px;
+background-color:rgba(0,0,0,1);
+z-index:9999;
+}
+nav .logo{
+    float:left;
+    color:#fff;
+    padding-top:18px;
+    padding-bottom:18px;
+    padding-left:20px;
+    padding-right:20px;
+    font-family:'Inconsolata', serif;
+    font-weight:bold;
+}
+#navbar ul{
+    text-align:right;
+    margin:0px;
+    padding:0px;
+    display:flex;
+    float:left;
+}
+#navbar ul li{
+    list-style:none;
+    display:inline-block;
+    padding:15px;
+}
+#navbar ul li a{
+    float:left;
+    text-decoration:none;
+    display:block;
+    text-transform:uppercase;
+    color:#fff;
+    font-size:15px;
+    font-family:'Raleway';
+    padding:9px 10px;
+    margin-right:8px;
+}
+#navbar ul li a:hover{
+    text-decoration:none;
+    background-color:#fff;
+    color:#000;
+    border-radius:7px;
+    .icon{
+  color:red;
+}
+    
+}
+#navbar ul li a.active{
+background:#cc0000;
+color:#fff;
+border-radius:7px;
+
 }
 
 #sidebar {
   position:absolute;
   top:0px;
-  left:-200px;
-  width:200px;
+  right:-220px;
+  width:220px;
   height:100%;
   background:red;
   transition:all 300ms linear;
 }
 #sidebar.active {
-  left:0px;
+  right:0px;
+  height:100vh;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 #sidebar .toggle-btn {
   position:absolute;
-  left:220px;
+  right:240px;
   top:10px;
 }
 #sidebar .toggle-btn span {
   display:block;
   width:30px;
   height:5px;
-  background:#151719;
+  background:#fff;
   margin:5px 0px;
   cursor:pointer;
 }
@@ -45,12 +114,55 @@ body{
   border-bottom:1px solid #444;
   color:#fcfcfc;
   text-transform:uppercase;
-  font-size:15px;
+  font-size:14px;
+}
+#sidebar div.list div.item:hover {
+transform:scale(1.01);
 }
   </style>
 </head>
 <body>
-  <div id="sidebar">
+<div class="wrap">
+  <nav>
+    <div class="logo">
+      <h3><i class="fa fa-suitcase" aria-hidden="true" style="padding:5px 10px;color:red;"></i>PACK YOUR BAGS</h3>
+    </div>
+    <div id="navbar">
+    <ul>
+      <li><a href="" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="login"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li>
+      <li><a href="signup"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
+      <li><a href="#"><i class="fa fa-suitcase" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Trips</a></li>
+     
+      </ul>
+      </div>
+      <div id="side-navbar">
+      <div id="sidebar">
+    <div class="toggle-btn" onclick="toggleSidebar(this)">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>  
+    <div class="list">
+      <div class="item"><i class="fa fa-user-circle fa-4x" style="color:white;" ></i>Nitin Krishna</div>
+      <div class="item"><i class="fa fa-credit-card-alt" style="color:white;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>10000</div>
+      <div class="item"><a  href="{% url 'profile' %}" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;"></i>profile</a></div>
+      <div class="item"><a  href="" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;"></i>change password</a></div>
+      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;color:white;"><i class="fa fa-sign-out" style="padding-right:10px;"></i>log out</a></div>
+    </div>
+  </div>
+  </nav>
+</div>
+{% if messages %}
+        {% for message in messages %}
+         {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+
+        {% endfor %}
+
+    {% endif %}
+
+
+  {% comment %} <div id="sidebar">
     <div class="toggle-btn" onclick="toggleSidebar(this)">
       <span></span>
       <span></span>
@@ -61,7 +173,7 @@ body{
       <div class="item"><a  href="">change password</a></div>
       <div class="item"><a  href="{% url 'auth-login' %}">log out</a></div>
     </div>
-  </div>
+  </div> {% endcomment %}
   <script>
   function toggleSidebar(ref){
     document.getElementById("sidebar").classList.toggle('active');
