--- a/voyage/authentication/templates/authentication/signup.html
+++ b/voyage/authentication/templates/authentication/signup.html
@@ -173,7 +173,7 @@ border-radius:7px;
       <form method="POST" >
       {%csrf_token%}
     <div class="Signup-box">
-        <h1>Sign Up</h1>
+        <h1><i class="fa fa-user-plus" style="margin-right:10px;"></i>Sign Up</h1>
         <div class="textbox" >
             <i class="fa fa-user" aria-hidden="true"></i>
             <input type="text" placeholder="First name" name="firstname" value="" required>
