--- a/voyage/authentication/templates/authentication/home.html
+++ b/voyage/authentication/templates/authentication/home.html
@@ -18,7 +18,7 @@ body{
     padding:0px;
 }
 nav{
-width:100%;
+width:100vw;
 position:fixed;
 height:70px;
 background-color:rgba(0,0,0,1);
@@ -77,7 +77,7 @@ border-radius:7px;
     height:75vh;
     background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
     background-size:cover;
-    background-poition:center;
+    background-position:center;
 }
 #lightSlider{
   list-style:none;
@@ -149,7 +149,7 @@ border-radius:7px;
   </nav>
 </div>
 <div id="section1">
-  <div id="introduction" style="position:absolute;top:70px;background-color:rgba(0,0,0,0.4);padding:20px;;width:100vw;height:65vh;">
+  <div id="introduction" style="position:absolute;top:70px;background-color:rgba(0,0,0,0.4);padding:20px;width:100vw;height:65vh;">
     <h5 style="text-align:center;color:white;font-family:serif; ">Looking to run away from stressful life?<br> Looking for some awesome holiday packages at great deals?<br> we got you covered<br> welcome to </h4>
     <h3 style="text-align:center;color:white;font-family:'Inconsolata',serif;font-weight:bold;"><i class="fa fa-suitcase" style="color:red;margin-right:5px;"></i>PACK YOUR BAGS</h3>
     <h4 style="text-align:center;color:white;font-family:serif;">Book flights,trains,buses and holiday packages<br> at affordable prices.</h4>
