--- a/voyage/authentication/templates/authentication/user.html
+++ b/voyage/authentication/templates/authentication/user.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+  <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
@@ -17,18 +18,19 @@
   margin:0px;
   padding:0px;
   box-sizing:border-box;
-  font-family:sans-serif;
+  font-family:'ABeeZee', sans-serif;
 }
 body{
-    background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
+    background:url(https://i.pinimg.com/originals/da/1d/1c/da1d1ca12720d0e5bdcfc519902666e9.jpg);
     background-size:cover;
     height:100%;
 }
 nav{
 width:100%;
+margin:auto;
 position:fixed;
 height:70px;
-background-color:rgba(0,0,0,1);
+background-color:rgba(0,0,0,0);
 z-index:9999;
 }
 nav .logo{
@@ -38,7 +40,7 @@ nav .logo{
     padding-bottom:18px;
     padding-left:20px;
     padding-right:20px;
-    font-family:'Inconsolata', serif;
+    font-family:'Piedra', cursive;
     font-weight:bold;
 }
 #navbar ul{
@@ -56,29 +58,41 @@ nav .logo{
 #navbar ul li a{
     float:left;
     text-decoration:none;
-    display:block;
+    display:inline-block;
     text-transform:uppercase;
     color:#fff;
     font-size:15px;
-    font-family:'Raleway';
+    font-family:'ABeeZee', serif;
     padding:9px 10px;
     margin-right:8px;
+    position:relative;
 }
-#navbar ul li a:hover{
-    text-decoration:none;
-    background-color:#fff;
-    color:#000;
-    border-radius:7px;
+#navbar ul li a:after{
+  background: none repeat scroll 0 0 transparent;
+  content:"";
+  position:absolute;
+  display:block;
+  background:red;
+  bottom:0;
+  height: 2px;
+  left: 50%;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+#navbar ul li a:hover:after{
+    color:red;
+    width:100%;
+    left:0;
     .icon{
   color:red;
 }
     
 }
-#navbar ul li a.active{
-background:#cc0000;
-color:#fff;
-border-radius:7px;
-
+#navbar ul li a.active:after{
+color:red;
+background:red;
+width:100%;
+left:0;
 }
 
 #sidebar {
@@ -87,13 +101,13 @@ border-radius:7px;
   right:-220px;
   width:220px;
   height:100%;
-  background:red;
+  background:rgba(0,0,0,0);
   transition:all 300ms linear;
 }
 #sidebar.active {
   right:0px;
   height:100vh;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+   {% comment %} box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19); {% endcomment %}
 }
 #sidebar .toggle-btn {
   position:absolute;
@@ -104,20 +118,106 @@ border-radius:7px;
   display:block;
   width:30px;
   height:5px;
-  background:#fff;
+  background:white;
   margin:5px 0px;
   cursor:pointer;
 }
 #sidebar div.list div.item  {
   padding:15px 10px;
   font-weight: bold;
-  border-bottom:1px solid #444;
-  color:#fcfcfc;
+  border-bottom:1px solid #fff;
+  color:white;
   text-transform:uppercase;
   font-size:14px;
 }
 #sidebar div.list div.item:hover {
 transform:scale(1.01);
+}
+#part1{
+  position:absolute;
+  top:70px;
+  padding:20px;
+  width:70vw;
+  height:20vh;
+  margin:auto;
+  justify-content:center;
+}
+.login-box{
+    width: 400px;
+    border-radius:10px;
+    color:red;
+    background-color:rgba(255,255,255,1);
+    padding:0px 20px;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.login-box h1{
+
+    font-size:40px;
+    border-bottom: 4px solid;
+    border-bottom-color:black;
+    margin-bottom:50px ;
+    padding:13px 0;
+    text-align:center;
+}
+.textbox{
+    width:100%;
+    overflow:hidden;
+    font-size: 20px ;
+    padding:8px 0;
+    margin:8px 0;
+    border-bottom: 1px solid;
+    border-bottom-color: black ;
+}
+.textbox i{
+    width:26px;
+   float:left;
+    color:red;
+    text-align: center;
+}
+.textbox input{
+    border:none;
+    outline:none;
+    background: white;
+    font-size: 18px;
+    color:black;
+    width:310px;
+    float:left;
+    margin: 0 10px;
+}
+.loginbtn{
+    text-align:center;
+    margin:0px;
+}
+.btn{
+    text-align:center;
+    color:white;
+    width:60%;
+    background: #e60000;
+    border:2px solid;
+    border-color: black;
+    padding:5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin:12px 0px;
+    border-radius:7px;
+}
+.btn:hover{
+  transform:scale(1.1);
+  background:#ff1a1a
+}
+.signup{
+    color:black;
+    padding:20px;
+    font-size: 17px;
+    font-weight: bold;
+    text-align:center;
+}
+.signup:hover{
+    color:#ff1a1a;
 }
   </style>
 </head>
@@ -129,9 +229,9 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
-      <li><a href="login"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li>
-      <li><a href="signup"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
+      <li><a href="#" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li>
+      <li><a href="#"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
       <li><a href="#"><i class="fa fa-suitcase" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Trips</a></li>
      
       </ul>
@@ -144,15 +244,47 @@ transform:scale(1.01);
       <span></span>
     </div>  
     <div class="list">
-      <div class="item"><i class="fa fa-user-circle fa-4x" style="color:white;" ></i>Nitin Krishna</div>
-      <div class="item"><i class="fa fa-credit-card-alt" style="color:white;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>10000</div>
-      <div class="item"><a  href="{% url 'profile' %}" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;"></i>profile</a></div>
-      <div class="item"><a  href="" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;"></i>change password</a></div>
-      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;color:white;"><i class="fa fa-sign-out" style="padding-right:10px;"></i>log out</a></div>
+      <div class="item"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>Nitin Krishna</div>
+      <div class="item"><i class="fa fa-credit-card-alt" style="color:red;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>10000</div>
+      <div class="item"><a  href="{% url 'profile' %}" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div>
+      <div class="item"><a  href="#" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
+      <div class="item"><a href="#" style="text-decoration:none;color:white;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div>
+      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;color:white;"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
     </div>
   </div>
   </nav>
 </div>
+ <div id="part1">
+<div id="title" style="margin:auto;justify-content:center;">
+<h3 style="text-align:center;position:absolute;color:white;justify-content:center;">Book Domestic and international Flight tickets
+</div>
+<br>
+</div>
+<form method="POST">
+       {%csrf_token%}
+    <div class="login-box">
+        <h1><i class="fa fa-plane" style="margin-right:10px;"></i>Flight Booking</h1>
+        <div class="textbox" >
+            <i class="fa fa-circle-o" aria-hidden="true"></i>
+            <input type="text" placeholder="From" name="from" value="" autocomplete="off" required>
+        </div>
+        <div class="textbox">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <input type="text" placeholder="destination" name="destination" value="" autocomplete="off" required>
+        </div>
+        <div class="textbox" >
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <input type="date" placeholder="Date of birth" name="DOB" value="" required>
+        </div>
+        <div class="textbox" >
+            <i class="fa fa-users" aria-hidden="true"></i>
+            <input type="text" placeholder="No of travellers" name="travellers" value="" autocomplete="off" required>
+        </div>
+        <div class="loginbtn">
+           <input class="btn" type="submit" name="" value="Search">
+        </div>
+    </div>
+    </form>
 {% if messages %}
         {% for message in messages %}
          {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
@@ -160,20 +292,6 @@ transform:scale(1.01);
         {% endfor %}
 
     {% endif %}
-
-
-  {% comment %} <div id="sidebar">
-    <div class="toggle-btn" onclick="toggleSidebar(this)">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>  
-    <div class="list">
-      <div class="item"><a  href="{% url 'profile' %}" >profile</a></div>
-      <div class="item"><a  href="">change password</a></div>
-      <div class="item"><a  href="{% url 'auth-login' %}">log out</a></div>
-    </div>
-  </div> {% endcomment %}
   <script>
   function toggleSidebar(ref){
     document.getElementById("sidebar").classList.toggle('active');
