--- a/voyage/authentication/templates/authentication/signup.html
+++ b/voyage/authentication/templates/authentication/signup.html
@@ -186,9 +186,9 @@ border-radius:7px;
             <i class="fa fa-venus-mars" aria-hidden="true"></i>
             <select id="select" name="gender" required>
               <option value="" selected disabled="true">Select gender</option>
-              <option value="M">Male</option>
-              <option value="F">Female</option>
-              <option value="O">Others</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+              <option value="others">Others</option>
             </select>
         </div>
         <div class="textbox" >
@@ -197,7 +197,7 @@ border-radius:7px;
         </div>
         <div class="textbox" >
             <i class="fa fa-calendar" aria-hidden="true"></i>
-            <input type="date" placeholder="Date of birth" name="DOB" value="" required>
+            <input type="date" placeholder="Date of birth" name="DOB" required>
         </div>
         <div class="textbox" >
             <i class="fa fa-phone" aria-hidden="true"></i>
